<resources>
  <string name="app_name">ryj</string>
  <string name="text_sign_in">Sign in</string>
  <string-array name="texts_tutorial">
    <item>The app is a tool for evaluation\nand public oversight,\ndesigned to monitor\nwork of the
      judicial system.</item>
    <item>Advocates and representatives\nof the professional community can\nevaluate and review the results\nof judges work.</item>
    <item>The community finally received\na source of impartial information\nto ensure the fairness\nof the work of the judicial system.</item>
  </string-array>
  <string name="text_skip">Skip</string>
  <string name="text_email">Email</string>
  <string name="text_password">Password</string>
  <string name="text_forgot_password">Forgot password?</string>
  <string name="text_sign_up">Sign up</string>
  <string name="text_judges">Judges</string>
  <string name="text_analytics">Analytics</string>
  <string name="text_news">News</string>
  <string name="text_i_am_judge">I am judge</string>
  <string name="text_i_am_lawyer">I am advocate</string>
  <string name="text_i_am_citizen">I am conscious citizen</string>
  <string name="text_sign_up_judge">Judge sign up</string>
  <string name="text_sign_up_lawyer">Lawyer sign up</string>
  <string name="text_sign_up_citizen">Citizen sign up</string>
  <string name="text_email_format_wrong">Email format is wrong</string>
  <string name="text_password_char_error">Password should containt at least 8 charachters</string>
  <string name="text_sign_in_error">Sign in error!</string>
  <string name="text_error">Error</string>
  <string name="text_sign_up_choose_role">Choose role</string>
  <string name="text_sign_up_judge_use_email">Use your official \nemail of judge</string>
  <string name="text_name">Name</string>
  <string name="text_surname">Surname</string>
  <string name="text_specialization">Specializations</string>
  <string name="text_category">Category of case</string>
  <string name="text_phone">Phone</string>
  <string name="text_next">Next</string>
  <string name="text_terms_cond_fst">By registering you agree with</string>
  <string name="text_terms_cond_link">
    <![CDATA[
    <a href="https://www.google.com.ua">The terms of use of the application</a>
    ]]>
  </string>
  <string name="text_terms_cond_trd">and agree to the use of your</string>
  <string name="text_terms_cond_fth">personal data</string>
  <string name="text_category_of_cases">Category of cases</string>
  <string-array name="text_categories_client">
    <item>Administrative violation</item>
    <item>Administrative</item>
    <item>Civil</item>
    <item>Criminal</item>
    <item>Economic</item>
    <item>Urgent lawsuits</item>
  </string-array>
  <string-array name="text_specializations_client">
    <item>Administrative</item>
    <item>Civil</item>
    <item>Criminal</item>
    <item>Economic</item>
    <item>Legal</item>
  </string-array>
  <string-array name="text_courts_client">
    <item>Supreme</item>
    <item>Highest civil criminal</item>
    <item>Highest economic</item>
    <item>Highest administrative</item>
    <item>Appellate</item>
    <item>Appellate economic</item>
    <item>Appellate administrative</item>
    <item>Local</item>
    <item>Local economic</item>
    <item>Local administrative</item>
  </string-array>
  <string name="text_name_must_contain_only_letters">Name must contain only letters without spaces</string>
  <string name="text_surname_must_contain_only_letters">Surname  must contain only letters</string>
  <string name="text_company_must_contain_only_letters">Company must contain only letters</string>
  <string name="text_category_must_be_selected">At least one category of case must be selected</string>
  <string name="text_specialization_must_be_selected">At least one specialization must be selected</string>
  <string name="text_phone_must_start_380">Phone must start from "\"+380"\" and contain 13 digits</string>
  <string name="text_email_of_judge_must_end">Email must contain only latin letters with "\"@"\" and end with "\"court.gov.ua"\"</string>
  <string name="text_password_must_not_be_empty">Password must not be empty</string>
  <string name="text_name_must_not_be_empty">Name must not be empty</string>
  <string name="text_surname_must_not_be_empty">Surname must not be empty</string>
  <string name="text_category_must_not_be_empty">Category must not be empty</string>
  <string name="text_specialization_must_not_be_empty">Specialization must not be empty</string>
  <string name="text_phone_must_not_be_empty">Phone must not be empty</string>
  <string name="text_email_must_not_be_empty">Email must not be empty</string>
  <string name="text_certificate_number_must_not_be_empty">Certification number must not be empty</string>
  <string name="text_forgot_password_desc">Enter your email,\nand we will send you a link\nfor password recovery</string>
  <string name="text_sign_up_finish">Sign up finish</string>
  <string name="text_sign_up_finish_desc">We sent you a letter,\ncheck the email you specified</string>
  <string name="text_ok">Ok</string>
  <string name="text_password_recovery">Password recovery</string>
  <string name="text_check_emil">Check email</string>
  <string name="text_we_sent_email">We sent email with instructions\nfor password recovery to you</string>
  <string name="text_certificate_number">Certificate number</string>
  <string name="text_place_of_work">Place of work</string>
  <string name="text_use_phone_you_provided">Use the phone number\nyou provided when registering the certificate</string>
  <string name="text_certificate_number_must_contain">Certificate number must contain only digits</string>
  <string name="text_upload_your_photo">Take a picture of your face to confirm your identity</string>
  <string name="text_avatar_not_found">Avatar not found</string>
  <string name="text_doc_photo">Photo of\ndocument</string>
  <string name="text_upload_document_photo">Upload or take a photo of document confirming yours personality (passport, driver\'s license, international passport)</string>
  <string name="text_doc_not_found">Doc not found</string>
  <string name="text_choose_name_from_drop_down">Enter your name and select it from the drop-down list</string>
  <string name="text_full_name">Full name</string>
  <string name="text_select_source">Select source</string>
  <string name="text_camera_permissions">Please, provide camera permissions</string>
  <string name="text_profile">Profile</string>
  <string name="text_not_authorized">You are not authorized</string>
  <string name="text_cancel">Cancel</string>
  <string name="text_logout">Logout</string>
  <string name="text_exit">Exit</string>
  <string name="text_type_of_court">Type of court</string>
  <string name="text_regions">Regions</string>
  <string name="text_cities">Cities</string>
  <string name="text_most_discussed">The most\ndiscussed</string>
  <string name="text_most_discussed_1line">The most discussed</string>
  <string name="text_best_rated">Best rated</string>
  <string name="text_lowest_rated">Lowest rated</string>
  <string name="text_found">Found</string>
  <string name="text_settings">Settings</string>
  <string name="text_court">Court</string>
  <string name="text_courts">Courts</string>
  <string name="text_not_selected">Not selected</string>
  <string name="text_district">District</string>
  <string name="text_region">Region</string>
  <string name="text_city">City</string>
  <string name="text_cases">Cases</string>
  <string name="text_judge_search">Judge search</string>
  <string name="text_please_wait">Please, wait</string>
  <string name="text_user_is_already_registered">User is already registered</string>
  <string name="text_all_comments">All comments</string>
  <string name="text_estimate">estimate</string>
  <string name="text_comment">comment</string>
  <string name="text_comments">Comments</string>
  <string name="text_marks_count">Marks</string>
  <string-array name="text_detail_rating">
    <item>@string/text_rating_conscientiousness</item>
    <item>@string/text_rating_attitude_with_respect</item>
    <item>@string/text_rating_absence_of_prejudice</item>
    <item>@string/text_rating_fair_behavior</item>
    <item>@string/text_rating_knowledge_of_procedural</item>
    <item>@string/text_rating_proper_execution</item>
    <item>@string/text_rating_knowledge_of_material_law</item>
    <item>@string/text_rating_legal_justification</item>
  </string-array>
  <string name="text_rating_conscientiousness">Сonscientiousness</string>
  <string name="text_rating_attitude_with_respect">Attitude to all people with respect and dignity</string>
  <string name="text_rating_absence_of_prejudice">Absence of prejudice and individual approach</string>
  <string name="text_rating_fair_behavior">Fair behavior and individual approach</string>
  <string name="text_rating_knowledge_of_procedural">Knowledge of procedural norms and evidence</string>
  <string name="text_rating_proper_execution">Proper execution of court rules, orders, observance of terms</string>
  <string name="text_rating_knowledge_of_material_law">Knowledge of material law</string>
  <string name="text_rating_legal_justification">Legal justification</string>
  <string name="text_apply">apply</string>
  <string name="text_leave_comment">Leave comment...</string>
  <string name="text_lawyer">Lawyer</string>
  <string name="text_no_comments">No comments</string>
  <string name="text_message_to_email">Message to e-mail</string>
  <string name="text_edit_user_data">Edit user data</string>
  <string name="text_contact_us">Contact us</string>
  <string name="text_about">About</string>
  <string name="text_log_out">Log out</string>
  <string name="text_your_profile">Your profile</string>
  <string name="text_current_password">Current password</string>
  <string name="text_new_password">New password</string>
  <string name="text_repeat_password">Repeat password</string>
  <string name="text_save">Save</string>
  <string name="text_court_search">Court search</string>
  <string name="text_change_password">Change password</string>
  <string name="text_case_number">Case number</string>
  <string name="text_information_is_disclosed">Information is not disclosed and is required only to confirm your objectivity</string>
  <string name="text_case_number_hint">№ of case</string>
  <string name="text_send">send</string>
  <string name="text_number_of_case_must_not_be_blank">Number of case must not be blank</string>
  <string name="text_on_the">on the</string>
  <string name="text_selected_judges">Selected judges</string>
</resources>
