<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="@dimen/margin_signin_left"
             android:layout_marginRight="@dimen/margin_signin_right">

  <android.support.v7.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
      android:id="@+id/toolbar_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:text="@string/text_judge_signup"
      android:textColor="@android:color/black"
      android:textSize="16sp"
      android:textStyle="bold"/>
  </android.support.v7.widget.Toolbar>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top|center_horizontal"
    android:layout_marginTop="40dp"
    android:orientation="vertical">


    <TextView
      android:id="@+id/useOfficialEmail"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"

      android:layout_marginTop="30dp"
      android:gravity="center"
      android:text="@string/text_use_judge_email"
      android:textColor="@android:color/darker_gray"
      android:textSize="16sp"
      android:textStyle="bold"/>

    <EditText
      android:id="@+id/name"
      android:layout_width="match_parent"
      android:layout_height="@dimen/height_signin_edt"
      android:layout_marginTop="30dp"
      android:background="@drawable/edittext_bg"
      android:hint="@string/text_name"
      android:paddingLeft="@dimen/padding_signin_hint"
      android:textSize="@dimen/size_signin_text_14sp"/>

    <EditText
      android:id="@+id/surname"
      android:layout_width="match_parent"
      android:layout_height="@dimen/height_signin_edt"
      android:layout_marginTop="@dimen/margin_signin_vertical_small"
      android:background="@drawable/edittext_bg"
      android:hint="@string/text_surname"
      android:paddingLeft="@dimen/padding_signin_hint"
      android:textSize="@dimen/size_signin_text_14sp"/>

    <EditText
      android:id="@+id/specialization"
      android:layout_width="match_parent"
      android:layout_height="@dimen/height_signin_edt"
      android:layout_marginTop="@dimen/margin_signin_vertical_small"
      android:background="@drawable/edittext_bg"
      android:focusable="false"
      android:hint="@string/text_specialization"
      android:inputType="text"
      android:maxLines="1"
      android:paddingLeft="@dimen/padding_signin_hint"
      android:textSize="@dimen/size_signin_text_14sp"/>

    <Spinner
      android:id="@+id/categories"
      android:layout_width="match_parent"
      android:layout_height="@dimen/height_signin_edt"
      android:layout_marginTop="@dimen/margin_signin_vertical_small"
      android:background="@drawable/selector_spinner"/>

    <EditText
      android:id="@+id/phone"
      android:layout_width="match_parent"
      android:layout_height="@dimen/height_signin_edt"
      android:layout_marginTop="@dimen/margin_signin_vertical_small"
      android:background="@drawable/edittext_bg"
      android:hint="@string/text_phone"
      android:paddingLeft="@dimen/padding_signin_hint"
      android:textSize="@dimen/size_signin_text_14sp"/>

    <EditText
      android:id="@+id/email"
      android:layout_width="match_parent"
      android:layout_height="@dimen/height_signin_edt"
      android:layout_marginTop="@dimen/margin_signin_vertical_small"
      android:background="@drawable/edittext_bg"
      android:hint="@string/text_email"
      android:paddingLeft="@dimen/padding_signin_hint"
      android:textSize="@dimen/size_signin_text_14sp"/>
  </LinearLayout>


  <Button
    android:id="@+id/next"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_signin_btn"
    android:layout_gravity="bottom|center_horizontal"
    android:layout_marginBottom="120dp"
    android:background="@drawable/selector_signin"
    android:enabled="false"
    android:text="@string/text_next"
    android:textColor="@android:color/background_light"/>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|center_horizontal"
    android:layout_marginBottom="30dp"
    android:orientation="vertical">

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:text="@string/text_terms_cond_fst"/>

    <TextView
      android:id="@+id/terms"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"

      android:clickable="true"
      android:gravity="center"
      android:textColor="@android:color/holo_blue_dark"
      android:textStyle="bold"/>

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:text="@string/text_terms_cond_trd"/>

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:text="@string/text_terms_cond_fth"/>
  </LinearLayout>

</FrameLayout>