<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">

  <android.support.v7.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top|center_horizontal">

    <TextView
      android:id="@+id/title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:text="@string/text_forgot_password"
      android:textColor="@android:color/black"
      android:textSize="18sp"/>
  </android.support.v7.widget.Toolbar>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/margin_sign_in_left"
    android:layout_marginRight="@dimen/margin_sign_in_right"
    android:layout_marginTop="@dimen/margin_sign_in_vertical_medium"
    android:orientation="vertical">

    <TextView
      android:id="@+id/text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="30dp"
      android:gravity="center"
      android:text="@string/text_forgot_password_desc"/>

    <EditText
      android:id="@+id/email"
      android:layout_width="match_parent"
      android:layout_height="@dimen/height_sign_in_edt"
      android:layout_marginTop="@dimen/margin_sign_in_vertical_medium"
      android:background="@drawable/edittext_bg"
      android:hint="@string/text_email"
      android:paddingLeft="@dimen/padding_text"
      android:textSize="@dimen/size_sign_in_text_14sp"/>

  </LinearLayout>

  <Button
    android:id="@+id/send"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_sign_in_btn"
    android:layout_gravity="center_horizontal|bottom"
    android:layout_marginBottom="40dp"
    android:layout_marginLeft="@dimen/margin_sign_in_left"
    android:layout_marginRight="@dimen/margin_sign_in_right"
    android:background="@drawable/selector_signin"
    android:enabled="false"
    android:text="@string/text_send"
    android:textColor="@android:color/background_light"/>

</FrameLayout>
