<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

  <android.support.v7.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
      android:id="@+id/title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:text="@string/text_sign_up_finish"
      android:textColor="@android:color/black"
      android:textSize="@dimen/size_actionbar_title"/>
  </android.support.v7.widget.Toolbar>


  <TextView
    android:id="@+id/textView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/margin_signin_left"
    android:layout_marginRight="@dimen/margin_signin_right"
    android:layout_marginTop="100dp"
    android:gravity="center"
    android:text="@string/text_sign_up_finish_desc"/>

  <Button
    android:id="@+id/ok"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_signin_btn"
    android:layout_gravity="bottom|center_horizontal"
    android:layout_marginLeft="@dimen/margin_signin_left"
    android:layout_marginRight="@dimen/margin_signin_right"
    android:layout_marginBottom="120dp"
    android:background="@drawable/selector_signin"
    android:text="@string/text_ok"
    android:textColor="@android:color/background_light"/>
</FrameLayout>
