<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/bg_dark"
             android:orientation="vertical">

  <TextView
    android:id="@+id/title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="64dp"
    android:fontFamily="sans-serif"
    android:gravity="center"
    android:text="@string/text_check_emil"
    android:textColor="@android:color/background_light"
    android:textSize="21sp"
    android:textStyle="normal"/>

  <Button
    android:id="@+id/ok"
    style="?android:borderlessButtonStyle"
    android:layout_width="match_parent"
    android:layout_height="@dimen/size_height_button"
    android:layout_gravity="bottom"
    android:background="@drawable/selector_button"
    android:letterSpacing="0.5"
    android:text="@string/text_ok"
    android:textColor="@android:color/background_light"
    android:textSize="@dimen/size_text_14sp"/>

  <TextView
    android:id="@+id/text"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="140dp"
    android:alpha="0.7"
    android:gravity="center"
    android:lineSpacingMultiplier="1.5"
    android:text="@string/text_we_sent_email"
    android:textColor="@android:color/background_light"
    android:textSize="@dimen/size_text_16sp"/>

  <ImageView
    android:id="@+id/imageView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="64dp"
    android:background="@drawable/img_email_sent"/>
</FrameLayout>
